--- a/app/src/main/res/drawable/button.xml
+++ b/app/src/main/res/drawable/button.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:color="#4c3faf"
+    android:color="#4d3fb9"
     tools:targetApi="lollipop">
     <item android:state_pressed="true">
         <shape android:shape="rectangle">
             <corners android:radius="10dp" />
-            <solid android:color="#5749c4" />
+            <solid android:color="#4e3fc1" />
         </shape>
     </item>
     <item android:state_focused="true">
